--- a/index.Rmd
+++ b/index.Rmd
@@ -248,8 +248,10 @@ rmd2rscript_labanswers <- function(infile="LECTURE2.Rmd"){    # function for con
 
 rmd2rscript("LECTURE7.Rmd")  ##
 rmd2rscript("LECTURE8.Rmd")
+rmd2rscript("LECTURE15.Rmd")
 rmd2rscript("LAB4.Rmd")  ##
 rmd2rscript("LAB5.Rmd")
+rmd2rscript("LAB7.Rmd")
 
 rmd2rscript("LECTURE12.Rmd")
 
